<resources>
    <string name="app_name">ScreeningApp</string>

    <!-- App bar -->
    <string name="appBar_event">EVENTS</string>
    <string name="appBar_guest">GUESTS</string>
    <!-- Text View -->
    <string name="txv_name">Hallo,</string>

    <!-- hint-->
    <string name="hint_name">Type name here..</string>
    <string name="hint_sentence">Type text palindrome</string>

    <!-- Button-->
    <string name="btn_next">Next</string>
    <string name="btn_check">Check</string>
    <string name="btn_event">Choose Event</string>
    <string name="btn_guest">Choose Guest</string>
    <!--    txv-->
<string name="txv_detail">Lorem ipsum dolor sit amet, consectetur adipiscing... </string> <!--    elit. Suspendisse nunc mauris, eleifend nec tristique vitae, maximus id arcu. Morbi quis aliquet justo, vel porttitor lorem...-->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">Welcome</string>
    <string name="subtitle_activity_home">This is app for suitmedia mobile developer test</string>



    <string name="copyright">Copyright &#169; 2020 Suitmedia All rights reserved.</string>

</resources>
