<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

<LinearLayout
    android:layout_marginTop="172dp"
    android:id="@+id/layout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:orientation="horizontal">

    <TextView
        android:text="@string/txv_name"
        android:textSize="20sp"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txvName"
        android:textSize="20sp"
        android:padding="12dp"
        android:layout_width="fill_parent"
        android:gravity="right"
        android:layout_height="wrap_content" />

</LinearLayout>

    <Button
        android:id="@+id/btnEvent"
        android:text="@string/btn_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/btn_default"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/btnGuest"
        android:text="@string/btn_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_default"
        app:layout_constraintTop_toBottomOf="@+id/btnEvent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.075" />


</androidx.constraintlayout.widget.ConstraintLayout>