<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/img_avatar" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_txtfield"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="14dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/greys"
            android:gravity="center"/>

        <EditText
            android:id="@+id/edtPalindrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_txtfield"
            android:gravity="center"
            android:hint="@string/hint_sentence"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/greys"
            android:layout_marginBottom="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <Button
                android:id="@+id/btn_next"
                android:textAllCaps="false"
                android:layout_weight="0.9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_orange"
                android:text="@string/btn_next"
                android:textSize="18sp"
                android:shadowDy="20"
                android:shadowRadius="0"
                android:outlineAmbientShadowColor="@color/black"
                android:outlineProvider="background"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp" />

            <Button
                android:id="@+id/btn_check"
                android:textAllCaps="false"
                android:layout_weight="0.2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_orange"
                android:text="@string/btn_check"
                android:textSize="18sp"
                android:shadowDy="20"
                android:shadowRadius="0"
                android:outlineProvider="background"
                android:outlineAmbientShadowColor="@color/black"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"/>


        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>